# oko

./: .gitignore  .prettierignore  .syncpackrc.cjs  .syncpackrc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  biome.json  lerna.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-pr-review.yml  codeql.yml  deploy_oko_apps.yml
apps/customer_dashboard/: README.md  customer_dashboard.env.example  global.d.ts  package.json  tsconfig.json
apps/demo_web/: demo_web.env.example  global.d.ts  package.json  tsconfig.json
apps/docs_web/: docusaurus.config.ts  package.json
apps/email_template/: config.js  config.production.js  package-lock.json
apps/email_template_2/: package.json  tsconfig.json
apps/ewallet_admin_web/: ewallet_admin_web.env.example  global.d.ts  package.json  tsconfig.json
apps/import_demo_web/: README.md  import_demo_web.env.example  package.json  tsconfig.json
apps/oko_admin_web/: global.d.ts  package.json  tsconfig.json
apps/user_dashboard/: README.md  global.d.ts  next.config.ts  package.json  tsconfig.json  user_dashboard.env.example
backend/admin_api/: jest.config.js  package.json  tsconfig.json
backend/attached_api/: package.json  tsconfig.json
backend/cr_api/: jest.config.mjs  package.json
backend/ct_dashboard_api/: README.md  jest.config.js  package.json  tsconfig.json
backend/docker/: docker-compose.yml  ewallet_api_server.Dockerfile  oko_api_server.Dockerfile
backend/ewallet_api_server_state/: package.json  tsconfig.json
backend/ewallet_pg_interface/: package.json  tsconfig.json
backend/ks_node_health/: package.json  tsconfig.json
backend/log_api/: jest.config.mjs  package.json  tsconfig.json
backend/oko_api_error_codes/: jest.config.mjs  tsconfig.json
backend/oko_api_server_state/: package.json  tsconfig.json
backend/oko_pg_interface/: knexfile.ts  package.json  tsconfig.json
backend/openapi/: package.json  tsconfig.json
backend/proxy_api/: package.json  tsconfig.json
backend/social_login_api/: package.json  tsconfig.json
backend/tss_api/: README.md  package.json  tsconfig.json
backend/user_dashboard_api/: README.md  jest.config.js  package.json  tsconfig.json
common/ewallet_types/: package.json
common/oko_types/: package.json  tsconfig.json
crypto/bytes/: package.json
crypto/common_crypto_js/: README.md  package.json
crypto/crypto_js/: jest.config.mjs  package.json  tsconfig.json
crypto/isomorphic_crypto_js/: README.md  package.json  tsconfig.json
crypto/tecdsa/: README.md
crypto/tecdsa/cait_sith_keplr_addon/addon/: Cargo.toml  package.json
crypto/tecdsa/cait_sith_keplr_addon/addon/.cargo/: config.toml
crypto/tecdsa/cait_sith_keplr_addon/addon/npm/linux-x64-gnu/: README.md  package.json
crypto/tecdsa/cait_sith_keplr_addon/addon/npm/win32-x64-msvc/: package.json
crypto/tecdsa/cait_sith_keplr_addon/addon/src/: keygen.rs  lib.rs  presign.rs
crypto/tecdsa/cait_sith_keplr_addon/addon/src/triples/: client.rs  server.rs
crypto/teddsa/frost_ed25519_keplr/: Cargo.toml  LICENSE  LICENSE.MIT
crypto/teddsa/frost_ed25519_keplr/benches/: bench.rs
crypto/teddsa/frost_ed25519_keplr/src/: lib.rs  point.rs
crypto/teddsa/frost_ed25519_keplr/src/sss/: combine.rs  extend.rs  lagrange.rs  mod.rs  reshare.rs  split.rs  tests.rs
crypto/teddsa/frost_ed25519_keplr/src/tss/: mod.rs
crypto/teddsa/frost_ed25519_keplr/src/tss/keys/: dkg.rs  refresh.rs  repairable.rs
crypto/teddsa/frost_ed25519_keplr/tests/: common_traits_tests.rs  integration_tests.rs  interoperability_tests.rs  recreation_tests.rs  rerandomized_tests.rs  serde_tests.rs  serialization_tests.rs
crypto/teddsa/frost_ed25519_keplr/tests/helpers/: elements.json  mod.rs  repair-share.json  samples.json  samples.rs  vectors-big-identifier.json  vectors.json  vectors_dkg.json
crypto/teddsa/frost_ed25519_keplr_wasm/wasm/: Cargo.toml
crypto/teddsa/frost_ed25519_keplr_wasm/wasm/src/: keygen.rs  lib.rs  sign.rs
crypto/teddsa/frost_ed25519_keplr_wasm/wasm/src/keys/: identifier.rs  key_package.rs  mod.rs  public_key_package.rs  scalar_mult.rs
crypto/teddsa/frost_ed25519_keplr_wasm/wasm/src/sss/: combine.rs  extend.rs  key_package.rs  mod.rs  reshare.rs  split.rs
crypto/teddsa/teddsa_keplr_mock/: Cargo.toml
crypto/teddsa/teddsa_keplr_mock/src/: error.rs  lib.rs  sign.rs  types.rs
crypto/teddsa/teddsa_wasm/wasm/: Cargo.toml
crypto/teddsa/teddsa_wasm/wasm/src/: keygen.rs  lib.rs  sign.rs  sss.rs
crypto/teddsa/teddsa_wasm_mock/wasm/: Cargo.toml
crypto/teddsa/teddsa_wasm_mock/wasm/src/: keygen.rs  lib.rs  sign.rs
documentation/: install_and_run.md  key_share_node.md  node_upgrade.md
embed/ewallet_attached/: ewallet_attached.env.example  package.json  tsconfig.json  vite.config.ts
embed/oko_attached/: .gitignore  index.html  oko_attached.env.example  package.json  vite.config.ts
examples/: README.md
examples/cosmos-nextjs/: package.json
examples/cosmos_nextjs/: package.json
examples/cosmoskit-nextjs/: .env.example  README.md  package.json
examples/cosmoskit_nextjs/: package.json
examples/evm-nextjs/: package.json
examples/evm-wagmi-nextjs/: package.json
examples/evm_nextjs/: README.md  package.json
examples/evm_wagmi_nextjs/: .env.example  README.md  (+1 more)
key_share_node/key_share_node_2/pg_interface/: Cargo.toml
key_share_node/key_share_node_2/pg_interface/migrate/: Cargo.toml  README.md
key_share_node/key_share_node_2/pg_interface/migrate/scripts/: migrate.sh  migrate_1.sh  migrate_2.sh
key_share_node/key_share_node_2/pg_interface/migrate/src/: main.rs
key_share_node/key_share_node_2/pg_interface/src/: key_shares.rs  lib.rs  migration.rs  postgres.rs  types.rs  users.rs  wallets.rs  witnessed_id_tokens.rs
key_share_node/key_share_node_2/server/: Cargo.toml
key_share_node/key_share_node_2/server/src/: ecdhe.rs  handlers.rs  lib.rs  main.rs  types.rs
key_share_node/key_share_node_2/server/tests/: integration_test.rs
scripts/: README.md  ci-setup.sh  tmux-e2e-start.sh
(+2876 files in other folders)
