[package]
name = "frost_ed25519_keplr"
edition = "2021"
# rust-version.workspace = true
version = "2.2.0"
readme = "README.md"
authors = [
    "Deirdre Connolly <durumcrustulum@gmail.com>",
    "Chelsea Komlo <me@chelseakomlo.com>",
    "Conrado Gouvea <conradoplg@gmail.com>",
    "Natalie Eskinazi <natalie@znfd.org>",
]
repository = "https://github.com/ZcashFoundation/frost"
# license.workspace = true
keywords = ["cryptography", "crypto", "ed25519", "threshold", "signature"]
description = "A Schnorr signature scheme over Ed25519 that supports FROST."

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
frost_rerandomized = { workspace = true }
frost_core = { workspace = true }

curve25519-dalek = { version = "=4.1.3", features = ["rand_core"] }
document-features = { workspace = true }
rand_core = { workspace = true }
sha2 = { version = "0.10.2", default-features = false }

[dev-dependencies]
frost_core = { workspace = true, features = ["test-impl"] }
frost_rerandomized = { workspace = true, features = ["test-impl"] }

criterion = { workspace = true }
ed25519-dalek = "2.1.0"
insta = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["serialization", "cheater-detection", "std"]
# No longer needed. Kept for retrocompatibility until 3.0.0
std = []
#! ## Features
## Enable `serde` support for types that need to be communicated. You
## can use `serde` to serialize structs with any encoder that supports
## `serde` (e.g. JSON with `serde_json`).
serde = ["frost_core/serde"]
## Enable a default serialization format. Enables `serde`.
serialization = [
    "serde",
    "frost_core/serialization",
    "frost_rerandomized/serialization",
]
## Enable cheater detection
cheater-detection = [
    "frost_core/cheater-detection",
    "frost_rerandomized/cheater-detection",
]

[lib]
# Disables non-criterion benchmark which is not used; prevents errors
# when using criterion-specific flags
bench = false

[[bench]]
name = "bench"
harness = false
