[package]
name = "teddsa_keplr_mock"
description = "Threshold EdDSA (FROST) for Ed25519"
repository = "https://github.com/chainapsis/oko"
version = "0.0.1-rc.0"
edition = "2021"
license = "MIT"

[dependencies]
frost-ed25519 = "2.0.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
