[package]
name = "teddsa_keplr_mock"
description = "Threshold EdDSA (FROST) for Ed25519"
repository = "https://github.com/chainapsis/oko"
version = "0.0.1-rc.0"
edition = "2021"
license = "MIT"

[dependencies]
frost_ed25519_keplr = { workspace = true, features = ["serialization"] }
rand_core = { workspace = true, features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
rand = { workspace = true }
