[package]
name = "ksn-pg-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
postgres-types = { version = "0.2", features = [
    "derive",
    "with-uuid-1",
    "with-chrono-0_4",
    "with-serde_json-1",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
