[package]
name = "key-share-node-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "key_share_node"
path = "src/lib.rs"

[[bin]]
name = "key_share_node_server"
path = "src/main.rs"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32", features = ["full"] }
elliptic-curve = { version = "0.12.3", features = ["ecdh", "sec1"] }
k256 = { version = "0.11.6", features = ["ecdh"] }
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
hex = "0.4.3"
once_cell = "1.19.0"
base64ct = "=1.6.0"

key-share-node-core = { path = "../core" }

[dev-dependencies]
tokio-test = "0.4.3"
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
